--- a/init.org
+++ b/init.org
@@ -204,6 +204,7 @@ Kill all buffers except for scratch.
 (defun kill-all-buffers-except-scratch ()
   "Kill all buffers except for *scratch*."
   (interactive)
+  (setq calc-embedded-active nil)
   (mapc 'kill-buffer 
         (delete (get-buffer "*scratch*") (buffer-list)))
   (message "Killed all buffers except *scratch*."))
@@ -412,6 +413,12 @@ Faces.
                     :foreground color-dark-subdued)
 
 
+(set-face-attribute 'show-paren-match nil
+                    :background nil
+                    :foreground color-red
+                    :weight 'bold)
+
+
 (with-eval-after-load 'hl-line
   (set-face-attribute 'hl-line nil
                       :background "#1e1e1e"))
@@ -596,6 +603,18 @@ Autoselect window with mouse on it.
 (setq-default mouse-autoselect-window t)
 #+end_src
 
+Cool way to resize windows.
+
+#+begin_src emacs-lisp :tangle yes
+(use-package windresize
+  :config
+
+  (define-key windresize-map (kbd "l") #'windresize-right)
+  (define-key windresize-map (kbd "h") #'windresize-left)
+  (define-key windresize-map (kbd "k") #'windresize-up)
+  (define-key windresize-map (kbd "j") #'windresize-down))
+#+end_src
+
 Split vertically by default.
 
 #+begin_src emacs-lisp :tangle yes
@@ -670,6 +689,10 @@ Evil leader keybindings.
 
 ;; swap window sides
 (evil-leader/set-key (kbd "y") #'window-swap-states)
+
+
+;; swap window sides
+(evil-leader/set-key (kbd "z") #'windresize)
 #+end_src
 
 ** Mode line
@@ -683,6 +706,34 @@ Mode line config.
 (setq-default display-time-day-and-date t)
 (setq-default display-time-format " %H:%M")
 (display-time)
+
+(defun mood-line-segment-pdf-page ()
+  "Displays the current page in the mode-line."
+  (concat (when (equal major-mode 'pdf-view-mode)
+            (format "― Page %s" (pdf-view-current-page)))))
+
+(setq-default mode-line-format
+                      '((:eval
+                         (mood-line--format
+                          ;; Left
+                          (format-mode-line
+                           '(" "
+                             (:eval (mood-line-segment-modified))
+                             (:eval (mood-line-segment-buffer-name))
+                             (:eval (mood-line-segment-position))
+                             (:eval (mood-line-segment-pdf-page))))
+
+                          ;; Right
+                          (format-mode-line
+                           '((:eval (mood-line-segment-eol))
+                             (:eval (mood-line-segment-encoding))
+                             (:eval (mood-line-segment-vc))
+                             (:eval (mood-line-segment-major-mode))
+                             (:eval (mood-line-segment-misc-info))
+                             (:eval (mood-line-segment-flycheck))
+                             (:eval (mood-line-segment-flymake))
+                             (:eval (mood-line-segment-process))
+                             " "))))))
 #+end_src
 
 Custom faces.
@@ -1025,6 +1076,7 @@ mode's variables are set and right before the rest of the evil config.
 (defun kill-all-other-buffers ()
   "Kill all buffers except for this and *scratch*."
   (interactive)
+  (setq calc-embedded-active nil)
   (mapc 'kill-buffer 
         (delete (current-buffer)
                 (delete (get-buffer "*scratch*") (buffer-list))))
@@ -1068,6 +1120,7 @@ mode's variables are set and right before the rest of the evil config.
                                (interactive)
                                (if (equal major-mode 'org-agenda-mode)
                                    (org-agenda-exit)
+                                 (setq calc-embedded-active nil)
                                  (kill-this-buffer))))
   (evil-leader/set-key "E" #'kill-all-other-buffers)
   (evil-leader/set-key "x" #'(lambda ()
@@ -1710,6 +1763,16 @@ Example:
 
 
 (evil-define-key 'normal global-map (kbd "g r r") #'rotate-word-at-point)
+#+end_src
+
+For large files.
+
+#+begin_src emacs-lisp :tangle yes
+(use-package vlf
+  :config
+  (require 'vlf-setup)
+
+  (setq-default vlf-application 'dont-ask))
 #+end_src
 
 Key bindings.
@@ -2567,6 +2630,12 @@ Evil leader bindings.
 
 * Programming
 
+General programming keybindings.
+
+#+begin_src emacs-lisp :tangle yes
+(define-key global-map (kbd "<f12>") #'compile)
+#+end_src
+
 ** Flycheck
 
 Customize faces.
@@ -2870,6 +2939,25 @@ LaTeX config.
   ;; Update PDF buffers after successful LaTeX runs
   (add-hook 'TeX-after-compilation-finished-functions
             #'TeX-revert-document-buffer))
+#+end_src
+
+TODO: Make the godforsaken =font-latex-sedate-face= work.
+
+#+begin_src emacs-lisp :tangle yes
+(defface font-latex-sedate-face
+  '((((class grayscale) (background light)) (:foreground "DimGray"))
+    (((class grayscale) (background dark))  (:foreground "LightGray"))
+    (((class color) (background light)) (:foreground color-blue))
+    (((class color) (background dark))  (:foreground color-blue))
+   ;;;(t (:underline t))
+    )
+  "Face used to highlight sedate stuff."
+  :group 'font-latex-highlighting-faces)
+
+
+(set-face-attribute 'font-latex-sedate-face nil
+                    :foreground color-blue
+                    :weight 'bold)
 #+end_src
 
 Add =evil-embrace= pairs to LaTeX mode.
@@ -3779,8 +3867,8 @@ Customize faces.
 
 
 (set-face-attribute 'org-block nil
-                    :foreground "#fdf4c1"
-                    :background "#121112")
+                    :foreground color-foreground
+                    :background color-background)
 
 
 (set-face-attribute 'org-code nil
@@ -3932,6 +4020,25 @@ Add =evil-embrace= pairs to org mode and add text objects.
                              (embrace-add-pair ?u "_" "_")))
 
 
+(defun evil-tex-brace-movement-backwards ()
+  "Brace movement similar to S-TAB in cdlatex.
+
+Example: (| symbolizes point)
+\frac{a}{|} => \frac{a|}{}
+\frac{a}{b|} => \frac{a|}{b}"
+  (interactive)
+  ;; go to the closing } of the current scope
+  (search-forward "}" (line-end-position))
+  (backward-sexp)
+  ;; encountered a {? go to just before its terminating }
+  (when (save-excursion
+          (backward-char)
+          (looking-at "}"))
+    (backward-sexp)
+    (forward-char)
+    (forward-sexp)))
+
+
 (use-package evil-tex
   :config
   (add-hook 'org-mode-hook #'evil-tex-mode)
@@ -3965,7 +4072,49 @@ Add =evil-embrace= pairs to org mode and add text objects.
                      ("n" "\\left\\lVert " . " \\right\\rVert") ; (n for norm)
                      ("N" "\\lVert " . " \\rVert"))
                    keymap)
-                  keymap)))
+                  keymap))
+
+  (setq-default evil-tex-env-map
+                (let ((keymap (make-sparse-keymap)))
+                  (evil-tex-bind-to-env-map
+                   '(("x" . evil-tex-get-env-for-surrounding)
+                     ("e" . "equation")
+                     ("E" . "equation*")
+                     ("f" . "figure")
+                     ("i" . "itemize")
+                     ("I" . "enumerate")
+                     ("b" . "frame")
+                     ("a" . "align")
+                     ("A" . "align*")
+                     ("y" . "array")
+                     ("n" . "alignat")
+                     ("N" . "alignat*")
+                     ("r" . "eqnarray")
+                     ("l" . "flalign")
+                     ("L" . "flalign*")
+                     ("g" . "gather")
+                     ("G" . "gather*")
+                     ("mb" . "bmatrix")
+                     ("mv" . "vmatrix")
+                     ("ma" . "amatrix")
+                     ("c" . "cases")
+                     ("z" . "tikzpicture")
+                     ;; prefix t - theorems
+                     ("ta" . "axiom")
+                     ("tc" . "corollary")
+                     ("tC" . "claim")
+                     ("td" . "definition")
+                     ("te" . "examples")
+                     ("ts" . "exercise")
+                     ("tl" . "lemma")
+                     ("tp" . "proof")
+                     ("tq" . "question")
+                     ("tr" . "remark")
+                     ("tt" . "theorem"))
+                   keymap)
+                  keymap))
+
+  (define-key evil-tex-mode-map (kbd "M-p") #'evil-tex-brace-movement-backwards))
 #+end_src
 
 Display entities in current line (thanks [[https://www.reddit.com/r/emacs/comments/i9pfld/disable_orgprettyentities_on_the_current_line/][Reddit]]).
@@ -4793,6 +4942,7 @@ This is a :filter-args advice for `message`."
            :foreground color-background
            '(org-document-title
              header-line
+             org-block
              outline-1
              outline-2
              outline-3
@@ -4806,6 +4956,7 @@ This is a :filter-args advice for `message`."
            :background "#FFF"
            '(org-block-begin-line
              org-block-end-line
+             org-block
              sp-pair-overlay-face
              header-line
              yas-field-highlight-face))
@@ -5154,23 +5305,6 @@ Evaluate expression at limits.
 (evil-define-key 'normal global-map (kbd "g r p") #'evaluate-math-expression-at-point)
 #+end_src
 
-Use square brackets for matrices.
-
-#+begin_src emacs-lisp :tangle yes
-(put 'latex 'math-matrix-formatter
-     (lambda (a)
-       (if (and (integerp calc-language-option)
-                (or (= calc-language-option 0)
-                    (> calc-language-option 1)
-                    (< calc-language-option -1)))
-           (append '(vleft 0 "\\begin{bmatrix}")
-                   (math-compose-tex-matrix (cdr a) t)
-                   '("\\end{bmatrix}"))
-         (append '(horiz "\\begin{bmatrix} ")
-                 (math-compose-tex-matrix (cdr a) t)
-                 '(" \\end{bmatrix}")))))
-#+end_src
-
 Copy calc results as kill. [[https://emacs.stackexchange.com/a/48362][Thanks, Akinori!]]
 
 #+begin_src emacs-lisp :tangle yes
@@ -5197,8 +5331,12 @@ Key bindings.
 (define-key global-map (kbd "C-'") #'clean-quick-calc)
 (define-key org-mode-map (kbd "C-'") #'clean-quick-calc)
 
-(define-key global-map (kbd "C-M-'") #'calc)
-(define-key org-mode-map (kbd "C-M-'") #'calc)
+(define-key global-map (kbd "C-M-'") #'(lambda (&optional arg interactive)
+                                         (interactive "P\np")
+                                         (calc arg t interactive)))
+(define-key org-mode-map (kbd "C-M-'") #'(lambda (&optional arg interactive)
+                                         (interactive "P\np")
+                                         (calc arg t interactive)))
 
 (define-key global-map (kbd "C-M-;") #'calc-embedded)
 (define-key org-mode-map (kbd "C-M-;") #'calc-embedded)
@@ -5216,6 +5354,9 @@ Key bindings.
 (evil-define-key 'normal calc-mode-map (kbd "i") nil)
 
 (define-key calc-mode-map (kbd "C-c C-y") #'calc-copy-as-kill-clean)
+
+(evil-define-key 'normal calc-mode-map (kbd "M-k") #'evil-window-up)
+(evil-define-key 'normal calc-mode-map (kbd "M-w") #'evil-quit)
 #+end_src
 
 Hooks.
@@ -5226,8 +5367,27 @@ Hooks.
                               (calc-frac-mode 1)
                               (calc-radians-mode)
 
+                              (setq-default calc-symbolic-mode t)
+                              (setq-default calc-angle-mode 'rad)
+                              (setq-default calc-prefer-frac t)
+                              (setq-default calc-gnuplot-default-device "qt")
                               (setq-default calc-show-banner nil)
-                              (setq-default calc-gnuplot-default-device "qt")))
+                              (setq-default calc-display-trail nil)))
+
+
+(with-eval-after-load 'calc-lang
+  (put 'latex 'math-matrix-formatter
+       (lambda (a)
+         (if (and (integerp calc-language-option)
+                  (or (= calc-language-option 0)
+                      (> calc-language-option 1)
+                      (< calc-language-option -1)))
+             (append '(vleft 0 "\\begin{bmatrix}")
+                     (math-compose-tex-matrix (cdr a) t)
+                     '("\\end{bmatrix}"))
+           (append '(horiz "\\begin{bmatrix} ")
+                   (math-compose-tex-matrix (cdr a) t)
+                   '(" \\end{bmatrix}"))))))
 #+end_src
 
 ** External applications
@@ -5641,7 +5801,7 @@ BibTeX key bindings.
 Latex export options.
 
 #+begin_src text :tangle no :noweb-ref org-latex-assignment-class
-\\documentclass[a4paper,12pt]{article}
+\\documentclass[letterpaper,12pt]{article}
 
 \\usepackage[doublespacing]{setspace}
 \\usepackage[margin=1in]{geometry}
@@ -5658,7 +5818,7 @@ Latex export options.
 #+end_src
 
 #+begin_src text :tangle no :noweb-ref org-latex-apa6-class
-\\documentclass[a4paper,man]{apa6}
+\\documentclass[letterpaper,man]{apa6}
 
 \\usepackage{csquotes}
 \\usepackage{graphicx}
@@ -5675,7 +5835,7 @@ Latex export options.
 #+end_src
 
 #+begin_src text :tangle no :noweb-ref org-latex-math-document-class
-\\documentclass[a4paper,12pt,oneside]{book}
+\\documentclass[letterpaper,12pt,oneside]{book}
 \\usepackage[margin=1in]{geometry}
 \\usepackage{csquotes}
 \\usepackage{amsmath}
@@ -5802,7 +5962,7 @@ Latex export options.
 #+end_src
 
 #+begin_src text :tangle no :noweb-ref org-latex-math-homework-class
-\\documentclass[a4paper,12pt,oneside]{book}
+\\documentclass[letterpaper,12pt,oneside]{book}
 \\usepackage[margin=1in]{geometry}
 \\usepackage{csquotes}
 \\usepackage{amsmath}
