--- a/init.org
+++ b/init.org
@@ -695,10 +695,10 @@ Resize window more easily.
 (global-set-key (kbd "C-c h") #'evil-window-set-height)
 #+end_src
 
-Begin crusade against popup windows.
+Begin crusade against popup windows (deferred on trial basis).
 
 #+begin_src emacs-lisp :tangle yes
-(setq-default pop-up-windows nil)
+(setq-default pop-up-windows t)
 #+end_src
 
 Evil leader keybindings.
@@ -1623,6 +1623,14 @@ Customize helm appearance.
                     :extend t
                     :background 'unspecified
                     :foreground color-red)
+#+end_src
+
+File preview.
+
+#+begin_src emacs-lisp :tangle yes
+(use-package helm-file-preview
+  :config
+  (setq-default helm-file-preview-only-when-line-numbers nil))
 #+end_src
 
 Define key bindings.
@@ -3143,6 +3151,13 @@ LaTeX config.
                 TeX-source-correlate-start-server t)
 
 
+  ;; insert quotes literally
+  (define-key LaTeX-mode-map (kbd "C-\"") #'(lambda ()
+                                              (interactive)
+                                              (insert "\"\"")
+                                              (backward-char)))
+
+
   ;; Update PDF buffers after successful LaTeX runs
   (add-hook 'TeX-after-compilation-finished-functions
             #'TeX-revert-document-buffer))
@@ -3151,6 +3166,8 @@ LaTeX config.
 (use-package cdlatex
   :config
   (add-hook 'LaTeX-mode-hook #'turn-on-cdlatex)
+
+  (define-key cdlatex-mode-map (kbd "(") nil)
 
   (setq cdlatex-env-alist
         '(("bmatrix" "\\begin{bmatrix}?\\end{bmatrix}" nil)))
